# utils

./: .gitmodules  README.md
.github/workflows/: release_ic_macro_magic.yaml
CMake Helpers/: app_version.cmake  ztest.cmake
CMake Helpers/intercreate_project/: intercreate_project.cmake
CMake Helpers/intercreate_project/tests/: CMakeLists.txt
Formatters & Linters/C/black/: .clang-format
Macros/ic-macro-magic/: .clang-format  CMakeLists.txt  README.md  lint.cmake
Macros/ic-macro-magic/include/: ic_macro_magic.h
Macros/ic-macro-magic/include/ic_macro_magic/: ic_macro_magic_internal.h
Macros/ic-macro-magic/include/ic_macro_magic/ushet/: LICENSE  README.md  cpp_magic.h
Macros/ic-macro-magic/include/ic_macro_magic/zephyr/: README.md  util_internal.h  util_loops.h  util_macro.h
Macros/ic-macro-magic/tests/: CMakeLists.txt  test.cmake
Macros/ic-macro-magic/tests/test_enums/: main.c  my_enum.c  my_enum.h
Macros/ic-macro-magic/tests/test_tests/: main.c
